--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -156,7 +156,7 @@ $max-width: $x-large !default;
    ========================================================================== */
 
 $right-sidebar-width-narrow: 100px !default;   // default 200px
-$right-sidebar-width: 210px !default;          // default 300px
+$right-sidebar-width: 210px !default;          // default 300px (실제 적용되는 폭)
 $right-sidebar-width-wide: 230px !default;     // default 400px
 
 /*
