--- a/_sass/minimal-mistakes/_reset.scss
+++ b/_sass/minimal-mistakes/_reset.scss
@@ -19,7 +19,7 @@ html {
   }
 
   @include breakpoint($x-large) {
-    font-size: 18px;     //default 22px
+    font-size: 18px;     //default 22px (데스크탑 적용)
   }
 
   -webkit-text-size-adjust: 100%;
